@@ -1,3 +1,6 @@
+Tue Jul 29 2014 Aleksey
+	* LibRHash now exports torrent functions
+
 Mon Jul 21 2014 Tsukasa Oi
 	* fixed test_rhash.sh script failing on the en_US.UTF-8 locale
 
